# Private-credit-work

./: README.md  baseline_projection.csv  cclf_liquidity_model.py  dashboard.py  effective_scenarios.json  pyproject.toml  requirements.txt  scenario_summary.csv  stressed_projection.csv
data/processed/: cclf_senior_securities_section.txt  cliffwater_blocks.jsonl  financing_snapshot.csv  repurchase_history.csv  source_summary.md
data/raw/: CCLFX-Annual-Report.txt  CCLFX-Semi-Annual-Report.txt
issuer-surveillance/: NEXT_ACTIONS.md  PROJECT_COCKPIT.md  README.md  anaplan_memo.md  avalara_memo.md  bdc_bond_surveillance_framework.md  case_studies_medallia_pluralsight.md  coupa_memo.md  ecosystem_and_themes.md  expanded_watchlist.csv  finastra_memo.md  issuer_inventory.csv  issuer_lender_bdc_matrix.csv  issuer_risk_radar.csv  kaseya_memo.md  matrix_methodology.md  medallia_mark_timeline.md  medallia_memo.md  memo_queue.md  pluralsight_memo.md  prioritized_shortlist.md  realpage_legal_regulatory_timeline.md  realpage_memo.md  risk_buckets.md  scoring_framework.md  software_issuer_watchlist.md  source_log.md  zendesk_ai_financing_timeline.md  zendesk_memo.md
memo/: cclf_liquidity_memo.md
scenarios/: default_scenarios.json
scripts/: extract_cclf_pdf.py
tests/: test_liquidity_model.py
tools/: extract_cliffwater.py
