[project]
name = "private-credit-work"
version = "0.1.0"
description = "Cliffwater private credit liquidity analysis and extraction tooling"
requires-python = ">=3.10"
dependencies = [
  "pdfminer.six>=20221105",
  "pandas>=2.0",
  "streamlit>=1.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
